@@ -1,3 +1,7 @@
+drkns 01.10.2016 00:08:29 +0200 - build 4801
+
+1. Уточнение 4800.
+
 drkns 30.09.2016 19:31:55 +0200 - build 4800
 
 1. 0003315: unload:plugin.dll not close panel
